auto_wake_up and auto_resume
auto_wake_up and auto_resume
